wip: add config, some logging
